--- a/www/wsgiapp/flaskapp/codefetch/static/css/codefetch.css
+++ b/www/wsgiapp/flaskapp/codefetch/static/css/codefetch.css
@@ -4,3 +4,10 @@ div#footer {
     text-align: center;
     padding-top: 10px;
 }
+
+h3 {
+    font-size: 12px;
+    color: black;
+    border-bottom-width: 2px;
+    border-bottom-style: solid;
+}
