クロスドメイン対応でJSONPを使用する。

--- a/www/wsgiapp/flaskapp/codefetch/static/css/codefetch.css
+++ b/www/wsgiapp/flaskapp/codefetch/static/css/codefetch.css
@@ -5,9 +5,20 @@ div#footer {
     padding-top: 10px;
 }
 
-h3 {
-    font-size: 12px;
+h1 {
     color: black;
     border-bottom-width: 2px;
     border-bottom-style: solid;
+}
+
+h3 {
+    font-size: 12px;
+    color: black;
+    border-bottom-width: 1px;
+    border-bottom-style: dotted;
+}
+
+#explain {
+    font-size: 15px;
+    line-height: 200%;
 }
