--- a/www/wsgiapp/flaskapp/codefetch/templates/codefetch.html
+++ b/www/wsgiapp/flaskapp/codefetch/templates/codefetch.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <meta content="text/html; charset=utf-8" http-equiv="Content-Type">
-    <title>CodeFetch Demo</title>
+    <title>jQuery CodeFetch Demo</title>
     <link rel="stylesheet" type="text/css" href="codefetch/static/css/codefetch.css">
 
     <script type="text/javascript" src="codefetch/static/js/jquery-1.7.2.min.js"></script>
@@ -16,15 +16,15 @@
   </head>
 
   <body>
-    <h1> jQuery Plug-in codefetch.js Demo Page</h1>
+    <h1> jQuery Plug-in jquery.codefetch.js Demo Page</h1>
     <div id="main_content">
       <pre id="explain">
-        codefecth.jsはgithubよりソースコードを動的に取得して、指定したIDの要素に追加するjQueryプラグインです。
-        このページはそのデモページで、codefetch.js自身のソースコードを取得して表示しています。
+        jquery.codefetch.jsはgithubよりソースコードを動的に取得して、指定したIDの要素に追加するjQueryプラグインです。
+        このページはそのデモページで、jquery.codefetch.js自身のソースコードを取得して表示しています。
         以下のようにSyntaxHighlighterを併用してコードを表示することもできます。
       </pre>
 
-      <h3>codefetch.js</h3>
+      <h3>jquery.codefetch.js</h3>
       <div>
         <pre id="codefetchcode"></pre>
       </div>
